development/logging/elasticsearch/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-elas
  namespace: monitoring
  labels:
    component: sfs-elas
spec:
  type: ClusterIP
  selector:
    component: sfs-elas
  ports:
  - port: 9200
    targetPort: 9200
