development/logging/elasticsearch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-elas
  namespace: monitoring
  labels:
    component: ingress-elas
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: elasticsearch-alan.my.id
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-elas
            port:
              number: 9200
